Fix alignment of custom curve CSV icon
Icon would move downwards when the .details element was taller.

--- a/app/assets/stylesheets/custom_curve.sass
+++ b/app/assets/stylesheets/custom_curve.sass
@@ -13,6 +13,7 @@
     display: block
 
   .file
+    align-self: start
     background-size: 32px
     background-repeat: no-repeat
     background-position: 15px 15px
